[gd_scene load_steps=31 format=2]

[ext_resource path="res://Enemies/Bat.gd" type="Script" id=1]
[ext_resource path="res://Utils/Stats/Stats.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Sprites/red-bat-half.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Shadows/SmallShadow.png" type="Texture" id=4]
[ext_resource path="res://Utils/Hit and Hurt Boxes/HurtBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Utils/Overlap/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://Utils/Hit and Hurt Boxes/HitBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Utils/Overlap/SoftCollision.tscn" type="PackedScene" id=8]
[ext_resource path="res://Utils/Controllers/WanderController.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/Sprites/red-bat-full.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/green-bat-half.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/green-bat-full.png" type="Texture" id=12]

[sub_resource type="Shader" id=25]
code = "shader_type canvas_item;

uniform bool active = false;

	void fragment() {
		vec4 previous_color = texture(TEXTURE, UV);
		vec4 white_color = vec4(1.0, 1.0, 1.0, previous_color.a);
		vec4 new_color = previous_color;
		if (active){
			new_color = white_color;
		}
		COLOR = new_color;
	}"

[sub_resource type="ShaderMaterial" id=26]
resource_local_to_scene = true
shader = SubResource( 25 )
shader_param/active = true

[sub_resource type="Shader" id=27]
code = "shader_type canvas_item;

uniform bool active = false;

	void fragment() {
		vec4 previous_color = texture(TEXTURE, UV);
		vec4 white_color = vec4(1.0, 1.0, 1.0, previous_color.a);
		vec4 new_color = previous_color;
		if (active){
			new_color = white_color;
		}
		COLOR = new_color;
	}"

[sub_resource type="ShaderMaterial" id=28]
resource_local_to_scene = true
shader = SubResource( 27 )
shader_param/active = true

[sub_resource type="Shader" id=29]
code = "shader_type canvas_item;

uniform bool active = false;

	void fragment() {
		vec4 previous_color = texture(TEXTURE, UV);
		vec4 white_color = vec4(1.0, 1.0, 1.0, previous_color.a);
		vec4 new_color = previous_color;
		if (active){
			new_color = white_color;
		}
		COLOR = new_color;
	}"

[sub_resource type="ShaderMaterial" id=30]
resource_local_to_scene = true
shader = SubResource( 29 )
shader_param/active = true

[sub_resource type="Shader" id=31]
code = "shader_type canvas_item;

uniform bool active = false;

	void fragment() {
		vec4 previous_color = texture(TEXTURE, UV);
		vec4 white_color = vec4(1.0, 1.0, 1.0, previous_color.a);
		vec4 new_color = previous_color;
		if (active){
			new_color = white_color;
		}
		COLOR = new_color;
	}"

[sub_resource type="ShaderMaterial" id=32]
resource_local_to_scene = true
shader = SubResource( 31 )
shader_param/active = true

[sub_resource type="CircleShape2D" id=7]
radius = 4.0

[sub_resource type="CapsuleShape2D" id=8]
radius = 6.0
height = 6.0

[sub_resource type="CircleShape2D" id=9]
radius = 52.469

[sub_resource type="CircleShape2D" id=10]
radius = 6.0

[sub_resource type="CircleShape2D" id=11]
radius = 7.0

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("RedFullSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RedHalfSprite:material:shader_param/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GreenFullSprite:material:shader_param/active")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GreenHalfSprite:material:shader_param/active")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=15]
resource_name = "start"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("RedFullSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RedHalfSprite:material:shader_param/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GreenFullSprite:material:shader_param/active")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GreenHalfSprite:material:shader_param/active")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=16]
resource_name = "stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("RedFullSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RedHalfSprite:material:shader_param/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GreenFullSprite:material:shader_param/active")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GreenHalfSprite:material:shader_param/active")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=23]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("RedFullSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RedHalfSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GreenFullSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GreenHalfSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=24]
resource_name = "fly"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("RedFullSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RedHalfSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GreenFullSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GreenHalfSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[node name="Bat" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 32
script = ExtResource( 1 )

[node name="RedFullSprite" type="Sprite" parent="."]
visible = false
material = SubResource( 26 )
position = Vector2( 0, -13 )
texture = ExtResource( 10 )
hframes = 5

[node name="RedHalfSprite" type="Sprite" parent="."]
visible = false
material = SubResource( 28 )
position = Vector2( 0, -13 )
texture = ExtResource( 3 )
hframes = 5

[node name="GreenFullSprite" type="Sprite" parent="."]
material = SubResource( 30 )
position = Vector2( 0, -13 )
texture = ExtResource( 12 )
hframes = 5

[node name="GreenHalfSprite" type="Sprite" parent="."]
visible = false
material = SubResource( 32 )
position = Vector2( 0, -13 )
texture = ExtResource( 11 )
hframes = 5

[node name="ShadowSprite" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="Stats" parent="." instance=ExtResource( 2 )]
max_health = 2

[node name="HurtBox" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, -12 )
shape = SubResource( 8 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
visible = false
shape = SubResource( 9 )

[node name="HitBox" parent="." instance=ExtResource( 7 )]

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource( 10 )

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 11 )

[node name="WanderController" parent="." instance=ExtResource( 9 )]

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 14 )
anims/start = SubResource( 15 )
anims/stop = SubResource( 16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fly"
anims/RESET = SubResource( 23 )
anims/fly = SubResource( 24 )

[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="invincible_end" from="HurtBox" to="." method="_on_HurtBox_invincible_end"]
[connection signal="invincible_start" from="HurtBox" to="." method="_on_HurtBox_invincible_start"]

[editable path="HurtBox"]
[editable path="PlayerDetectionZone"]
[editable path="HitBox"]
[editable path="SoftCollision"]
