extends KinematicBody2D




func _on_Stats_no_health():
	pass # Replace with function body.


func _on_HurtBox_invincible_end():
	pass # Replace with function body.


func _on_HurtBox_invincible_start():
	pass # Replace with function body.


func _on_HurtBox_area_entered(area):
	pass # Replace with function body.
